# Tetris

./: CMakeLists.txt  README.md
include/: config.h  matrix.h  tetromino.h  text.h
src/: main.cpp  matrix.cpp  tetromino.cpp  text.cpp
